<resources>
    <string name="app_name">DevFest SBP Example</string>
    <string name="talk_name">Как мы ускоряем Яндекс под Android</string>
    <string name="talk_author">Артем Соковец</string>
    <string name="talk_description">Рекламируя вашему другу Kotlin, как замену Java, наверняка первым аргументом будет тот самый синтаксический сахар, от которого мы получаем профит каждый день: поддержка nullability из коробки, аргументы по умолчанию, свойства-делегаты, data и sealed классы и т.д. Но если нам понадобится прикрутить к проекту процессор аннотаций, то, к сожалению, вся информация, которую получится собрать о нашем коде, будет Java-специфична, а Kotlin-фичи останутся незамеченными. В этом докладе мы выясним, как использовать метаданные, добавляемые Kotlin-компилятором к коду, чтобы получить информацию об использованных особенностях языка, и как использовать её во время обработки аннотаций.</string>
    <string name="talk_description_eng">When promoting Kotlin over Java to your friend the first argument you’ll probably use will be its powerful syntax: in-house nullability support, default arguments, delegated properties, data sealed classes, etc. These features are really the stuff we’re benefiting from everyday, but if we’ll take Java annotation processors then sadly the only information they can get about our code will be Java-related and no info about Kotlin-specific features. In this talk we’ll find out how to use Kotlin metadata added by the compiler to get info about Kotlin language features in the code and utilise it during annotation processing.</string>
    <string name="all_speech">Все доклады</string>
    <string name="kotlin_annotation">Kotlin-friendly Annotation Processing</string>
    <string name="label_android">Android</string>
    <string name="last_name">Sergey Ryabov</string>
    <string name="lastName">Sokovets</string>
    <string name="firstName">Artem</string>
    <string name="country">Yandex, Saint-Petersburg</string>
    <string name="job_name">Mobile Consultant</string>
    <string name="author_description">I am Artem Sokovets from Russian Federation, Saint-Petersburg and have experience in test automation. I work at Sberbank-Technology on position Leading Engineer of Automation QA (responsibilities: CI/CD, selenium grid (openshift), development of automated scripts and QA tools). Have Java Certifications: OCA, OCP 7 and experience as a local speaker of Russian Conferences (SQADays, SberDays, etc) and test automation meetups.</string>
    <string name="talk_name_lesson_2">On the Other Side of Page Object</string>
    <string name="room_name">Room 1</string>
    <string name="talk_date">15 Aprile</string>
    <string name="talk_time">11:15</string>
    <string name="talk_label">Android</string>

    <string-array name="talk_tags_names">
        <item>Next Generation Mobile Platform</item>
        <item>Android</item>
        <item>Kotlin</item>
    </string-array>
</resources>
