<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/banner_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/talk_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/talk_name"
            android:textSize="26sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/tags_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/talk_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/talk_author"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/talk_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/talk_description" />

        <Button
            android:id="@+id/sign_in_with_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_speech"
            android:textColor="@android:color/white"
            android:theme="@style/My.Button"
            style="@style/Widget.AppCompat.Button.Colored" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>